@@ -1,6 +1,6 @@
 {
   "name":    "simp-useradd",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author":  "SIMP Team",
   "summary": "A SIMP puppet module for managing settings regarding users and user creation",
   "license": "Apache-2.0",
